<resources>
    <string name="app_name">GVC Smart Door</string>
    <string name="parse_app_id">bBy5Z9jR2KMlLR9j6FNqAX5LYkzzoOPLMjJBI55u</string>
    <string name="parse_client_key">IWGdxF6A4iaoh35Crc2FwZNLGrtERbPwFbj7qEJC</string>
    <string name="title_activity_login_or_register">LoginOrRegister</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_doors">Doors</string>
    <string name="title_activity_dispatch">Dispatch</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_door">Add Door</string>
    <string name="action_about">About</string>
    <string name="developer">Designed and Developed by : Yogeshwar Dan Charan,NSIT,Delhi</string>
    <string name="ideator">Concept and Hardware : Vinay Chaddha , GVC Systems</string>
    <string name="developer_info">For hugs and bugs : charanyogeshwar@gmail.com , 9013081795</string>
    <string name="mail_not_verifed_message">Please verify your email by clicking on link we sent you . Only then you can Add and View doors.</string>
    <string name="title_activity_door_addition">Door Addition</string>
    <string name="device_id_hint">Device Id</string>
    <string name="door_name_hint">Door Name</string>
    <string name="door_key_hint">Door Key</string>
    <string name="wifi_ssid_hint">Wifi SSID</string>
    <string name="wifi_password_hint">Wifi Password</string>
    <string name="cancel_add_door">Cancel</string>
    <string name="add_door">Add Door</string>
    <string name="door_key_confirm_hint">Confirm Door Key again</string>
    <string name="wifi_password_confirm_hint">Confirm Wifi Password again</string>
    <string name="title_activity_no_internet_connection">NoInternetConnection</string>
    <string name="title_activity_no_internect_connection">NoInternectConnection</string>
    <string name="no_connection">No Internet Connection !</string>
    <string name="unlock_text">Unlock</string>
    <string name="door_status_text">DoorStatus</string>
    <string name="door_name_text">DoorName</string>
</resources>
