<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"

    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="me.yogeshwardan.gvcsmartdoor.DoorAddition"
    >
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/deviceId"
        android:hint="@string/device_id_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/door_name"
        android:hint="@string/door_name_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/door_key"
        android:hint="@string/door_key_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/door_key_confirm"
        android:hint="@string/door_key_confirm_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/wifi_ssid"
        android:hint="@string/wifi_ssid_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/wifi_password"
        android:hint="@string/wifi_password_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/wifi_password_confirm"
        android:hint="@string/wifi_password_confirm_hint"
        android:singleLine="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel_add_door"
            android:id="@+id/cancel_add_door"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/add_door"
            android:id="@+id/add_door"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>